--- a/manifest.json
+++ b/manifest.json
@@ -6,8 +6,12 @@
     {
       "src": "icon.png",
       "sizes": "192x192",
-      "type": "image/png",
-      "purpose": "any maskable"
+      "type": "image/png"
+    },
+    {
+      "src": "icon2.png",
+      "sizes": "512x512",
+      "type": "image/png"
     }
   ],
   "theme_color": "#ffffff",
