--- a/manifest.json
+++ b/manifest.json
@@ -1,24 +1,25 @@
 {
-  "name": "Chat GPT Voice",
-  "short_name": "Voice",
-  "description": "Talk to Chat GPT instead of typing. Simply click or touch the screen and it will also respond with voice. Requires OpenAI API key that is stored in localStorage.",
-  "icons": [
-    {
-      "src": "icon.png",
-      "sizes": "192x192",
-      "type": "image/png"
-    },
-    {
-      "src": "icon2.png",
-      "sizes": "512x512",
-      "type": "image/png"
-    }
-  ],
-  "theme_color": "#ffffff",
-  "background_color": "#000000",
-  "display": "standalone",
-  "orientation": "portrait",
-  "scope": "/",
-  "start_url": "/voice.html",
-  "shape": "circle"
+    "name": "VoiceGPT",
+    "short_name": "VoiceGPT",
+    "description": "Talk to Chat GPT instead of typing. Simply click or touch the screen and it will also respond with voice. Requires OpenAI API key that is stored in localStorage.",
+    "icons": [
+        {
+            "src": "icon.png",
+            "sizes": "192x192",
+            "type": "image/png"
+        },
+        {
+            "src": "icon2.png",
+            "sizes": "512x512",
+            "type": "image/png"
+        }
+    ],
+    "theme_color": "#ffffff",
+    "background_color": "#000000",
+    "display": "standalone",
+    "orientation": "portrait",
+    "scope": "/",
+    "start_url": "/index.html",
+    "shape": "circle",
+    "version": "2.0.0"
 }
