--- a/manifest.json
+++ b/manifest.json
@@ -18,7 +18,7 @@
     "background_color": "#000000",
     "display": "standalone",
     "orientation": "portrait",
-    "start_url": "/tabs.html",
+    "start_url": "tabs.html",
     "scope": "/jay23606/chat-gpt-voice/main/",
     "shape": "circle",
     "version": "3.0.0"
